# blast_cs_guess_the_mystery_player

./: README.md  main.spec  pyproject.toml  window.ui
src/: 1.py  main.py  output.json  ui.py  window.py  弗一把.json
